about section error correction

--- a/index.html
+++ b/index.html
@@ -78,40 +78,46 @@
     </header>
     <!-- main section -->
      <main class=" bg-gray-100 ">
-<!-- about section -->
- <section class="mb-12 ">
-<div class="p-10 hidden lg:flex "><img src="./assets/Vector.png" alt=""></div>
-<!-- te&ima part -->
-<div class="md:container mx-auto lg:flex p-8  ">
-<!-- text-part -->
- <div class="flex-1">
-  <button class="bg-white px-2 py-1 rounded-2xl"><i class="fa-solid fa-arrow-right  mr-2"></i>About Us</button>
-  <h2 class="text-2xl md:text-5xl text-center md:text-left font-bold lg:w-11/12 xl:w-5/6 2x py-5 xl:mb-6">We design thoughtful, liveable spaces</h2>
-  <p class="lg:w-5/6 xl:mb-6">The barn house captivates with its blend of rustic charm and  
-    modern sophistication, featuring weathered wood, sleek metal accents.</p>
-  <!-- first flex -->
-   <div class="flex bg-white p-5  my-5  xl:my-7 lg:w-5/6 gap-4 rounded-xl">
-<div><img class="" src="./assets/commercial.png" alt=""></div>
-<div>
-  <h3 class="text-xl font-bold">Commercial</h3>
-  <p class="">The barn house captivates with its blend of rustic charm and modern.</p>
-</div>
-   </div>
-  <!-- second flex -->
-   <div class="flex bg-white p-5  mb-8 xl:my-7 lg:w-5/6 gap-4 rounded-xl">
-<div><img class="" src="./assets/residential.png" alt=""></div>
-<div>
-  <h3 class="text-xl font-bold">Residential</h3>
-  <p class="">The barn house captivates with its blend of rustic charm and modern.</p>
-</div>
-   </div>
-   
- </div>
- <!-- image part -->
-<div class=" flex-1 p-10"><img class="w-full " src="./assets/Rectangle.png" alt=""></div>
-    <!-- . -->
-</div>
- </section>
+ <!--  about section -->
+  <section class="py-10">
+    <div class="lg:px-6 xl:px-16 hidden lg:flex "><img src="./assets/Vector.png" alt=""></div>
+    <!-- text and image part -->
+    <div class="hero md:container mx-auto">
+      <div class="hero-content grid grid-cols-1 lg:grid-cols-2">
+       
+          <!--### -->
+          <div class="">
+            <button class="bg-white px-2 py-1 rounded-2xl"><i class="fa-solid fa-arrow-right  mr-2"></i>About Us</button>
+            <h2 class="text-2xl md:text-5xl text-center md:text-left font-bold lg:w-11/12 xl:w-5/6 2x py-5 xl:mb-6">We design thoughtful, liveable spaces</h2>
+            <p class="lg:w-5/6 xl:mb-6">The barn house captivates with its blend of rustic charm and  
+              modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            <!-- first flex -->
+             <div class="flex bg-white p-5  my-5  xl:my-7 lg:w-5/6 gap-4 rounded-xl">
+          <div><img class="" src="./assets/commercial.png" alt=""></div>
+          <div>
+            <h3 class="text-xl font-bold">Commercial</h3>
+            <p class="">The barn house captivates with its blend of rustic charm and modern.</p>
+          </div>
+             </div>
+            <!-- second flex -->
+             <div class="flex bg-white p-5  mb-8 xl:my-7 lg:w-5/6 gap-4 rounded-xl">
+          <div><img class="" src="./assets/residential.png" alt=""></div>
+          <div>
+            <h3 class="text-xl font-bold">Residential</h3>
+            <p class="">The barn house captivates with its blend of rustic charm and modern.</p>
+          </div>
+             </div>
+            </div>
+        <!-- ### -->
+        <div>
+          <img
+          src="./assets/Rectangle.png"
+          class="w-full rounded-lg shadow-2xl " />
+         </div>
+      </div>
+    </div>
+  </section>
+  
  <!-- work process section-->
   <section class="md:container mx-auto  pt-10 pb-20 md:p-10">
     <div class="text-center px-5">
